--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <label for="conta">conta</label>
                     <div>
                         <img src="./images/icon-dollar.svg" alt="icone do cifrão">
-                        <input type="number" name="conta" id="conta">
+                        <input type="number" name="conta" id="conta" placeholder="0">
                     </div>
                 </div>
 
@@ -29,18 +29,38 @@
                         <input type="button" value="20%">
                         <input type="button" value="25%">
                         <input type="button" value="50%">
-                        <input type="number" name="outra" id="outra">
+                        <input type="number" name="outra" id="outra" placeholder="outra">
                     </div>
                 </div>
 
                 <div class="pessoas">
-                    <label for="conta">quantidade de pessoas</label>
+                    <label for="pessoas">quantidade de pessoas</label>
                     <p>Não pode ser zero</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="icone da pessoa">
-                        <input type="number" name="conta" id="conta">
+                        <input type="number" name="pessoas" id="pessoas" placeholder="0">
                 </div>
             </form>
+        </section>
+
+        <section class="resultados">
+            <div class="gorjeta-total">
+                <p>
+                    <strong>Gorjeta</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
+           
+            <div class="total">
+                <p>
+                    <strong>Gorjeta</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
         </section>
     </main>
 </body>
