--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div class="pessoas">
                     <label for="pessoas">quantidade de pessoas</label>
-                    <p>Não pode ser zero</p>
+                    <p id="erro">Não pode ser zero</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="icone da pessoa">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
@@ -65,6 +65,7 @@
 
                 <strong>$ 0.00</strong>
             </div>
+            <button>limpar</button>
         </section>
     </main>
 </body>
