--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
         </section>
 
         <section class="resultados">
+           <div>
             <div class="gorjeta-total">
                 <p>
                     <strong>Gorjeta</strong> <br>
                     / pessoa
                 </p>
 
-                <strong>$ 0.00</strong>
+                <strong>R$ 0.00</strong>
             </div>
            
             <div class="total">
@@ -63,8 +64,9 @@
                     / pessoa
                 </p>
 
-                <strong>$ 0.00</strong>
+                <strong>R$ 0.00</strong>
             </div>
+           </div>
             <button>limpar</button>
         </section>
     </main>
