--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                 </div>
 
                 <div class="pessoas">
-                    <label for="pessoas">quantidade de pessoas</label>
+                    <div class="textos">
+                        <label for="pessoas">quantidade de pessoas</label>
                     <p id="erro">Não pode ser zero</p>
-                    <div>
+                    </div>
+                    <div class="input-box erro">
                         <img src="./images/icon-person.svg" alt="icone da pessoa">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
                 </div>
